updated plugin `Everest Forms` version 1.7.0.1

--- a/wp-content/plugins/everest-forms/assets/css/_fonts.scss
+++ b/wp-content/plugins/everest-forms/assets/css/_fonts.scss
@@ -2,7 +2,7 @@
  * _fonts.scss
  * Custom EverestForms fonts.
  */
-@font-face {
+ @font-face {
 	font-family: 'EverestForms';
 	src: url('../fonts/EverestForms.eot?l00bnz');
 	src: url('../fonts/EverestForms.eot?l00bnz#iefix') format('embedded-opentype'),
@@ -12,4 +12,33 @@
 	font-weight: normal;
 	font-style: normal;
 	font-display: block;
+}
+
+/**
+ * Icons
+ * Icon size should be 24dp.
+ **/
+.evf-icon {
+	padding: 8px;
+	border-radius: 4px;
+
+	* {
+		display: block;
+	}
+}
+
+
+/**
+ * Headings
+ **/
+.evf-h2 {
+	font-size: 28px;
+	font-weight: 600;
+}
+
+/**
+ * Text
+ **/
+.evf-text-center {
+	text-align: center;
 }
