--- a/wp-content/plugins/everest-forms/assets/css/admin.scss
+++ b/wp-content/plugins/everest-forms/assets/css/admin.scss
@@ -12,6 +12,17 @@
 @import 'animation';
 @import 'clearings';
 @import 'confirm';
+@import 'badge';
+@import 'buttons';
+@import 'colors';
+@import 'grid';
+@import 'card';
+@import 'table';
+
+//Utilities
+@import
+	'utility/display',
+	'utility/spacing';
 
 /**
  * Styling begins
@@ -41,6 +52,26 @@
 		-o-animation: rotating 1s linear infinite;
 		animation: rotating 1s linear infinite;
 	}
+}
+
+/**
+ * Grid Styles
+ **/
+
+.evf-form-row {
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -15px;
+	margin-right: -15px;
+}
+
+// Gutter for all col
+.evf-form-col-4,
+.evf-form-col-6 {
+	position: relative;
+	width: 100%;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
 .evf_addons_wrap {
@@ -233,6 +264,47 @@
 
 		&::before {
 			color: $red;
+		}
+	}
+}
+
+.evf-handler-counter {
+	display: flex;
+
+	.evf-handler-counter__button {
+		background: $color_gray-light-skin;
+		width: 30px;
+		height: 30px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		border: 1px solid $color_gray-lighten;
+
+		&.evf-handler-counter__button-minus {
+			border-radius: 3px 0 0 3px;
+		}
+
+		&.evf-handler-counter__button-plus {
+			border-radius: 0 3px 3px 0;
+		}
+
+		&.dashicons {
+			font-size: 20px;
+		}
+	}
+
+	.evf-handler-counter__input {
+		width: 80px;
+		border-radius: 0;
+
+		&::-webkit-outer-spin-button,
+		&::-webkit-inner-spin-button {
+			-webkit-appearance: none;
+			margin: 0;
+		}
+
+		&[type='number'] {
+			-moz-appearance: textfield;
 		}
 	}
 }
@@ -494,90 +566,6 @@ body.everest-forms-builder {
 }
 
 /**
- * Buttons
- */
-.everest-forms-btn,
-a.everest-forms-btn,
-button.everest-forms-btn {
-	border: none;
-	cursor: pointer;
-	overflow: hidden;
-	font-family: inherit;
-	padding: 10px 15px;
-	border-radius: 3px;
-	line-height: 1.25;
-	position: relative;
-	display: inline-block;
-	text-decoration: none;
-	color: $color_gray-base;
-	background: $color_gray-lighten;
-	transition: all 0.2s ease 0s;
-	z-index: 1;
-
-	.evf-loading {
-		width: 14px;
-		height: 14px;
-		background-size: 14px 14px;
-	}
-
-	&.everest-forms-btn-primary {
-		background-color: $everestforms;
-		color: $color-white;
-
-		&:hover {
-			color: $color-white;
-			background-color: darken($everestforms, 10%);
-		}
-	}
-
-	&.everest-forms-btn-small {
-		font-size: 12px;
-		padding: 5px 10px;
-	}
-
-	&.everest-forms-btn-link {
-		font-weight: 600;
-		color: $everestforms;
-		background: transparent;
-
-		&:hover {
-			color: darken($everestforms, 10%);
-			background: transparent;
-		}
-
-		&:focus {
-			box-shadow: none;
-			text-decoration: underline;
-		}
-	}
-
-	&.dashicons {
-		padding: 8px 15px;
-
-		&::before {
-			width: 20px;
-			height: 20px;
-			line-height: 1;
-			font-size: 20px;
-			margin-right: 10px;
-			font-family: dashicons;
-			vertical-align: middle;
-			padding: 2px 12px 2px 0;
-			border-right: 1px solid transparentize($color_gray-base, 0.7);
-		}
-	}
-
-	&:hover {
-		background-color: darken($color_gray-lighten, 10%);
-	}
-
-	&:focus {
-		outline: none;
-		box-shadow: 0 0 0 2px lighten($everestforms, 35%);
-	}
-}
-
-/**
  * Branding
  */
 .everest-forms_page_evf-builder,
@@ -592,104 +580,168 @@ button.everest-forms-btn {
 	}
 
 	// Toggle switch.
+	.everest-forms-toggle-form {
+		width: 28px;
+		height: 16px;
+		float: left;
+		margin-top: 3px;
+		margin-right: 4px;
+		position: relative;
+
+		input[type='checkbox'] {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			width: 100%;
+			opacity: 0;
+			z-index: 1;
+
+			&:checked {
+				+ .slider {
+					background-color: $green;
+
+					&::before {
+						transform: translateX(100%);
+					}
+				}
+			}
+		}
+
+		.slider {
+			cursor: pointer;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			transition: 0.4s;
+			background-color: #cdd0d2;
+
+			&::before {
+				content: '';
+				width: 12px;
+				height: 12px;
+				position: absolute;
+				left: 2px;
+				bottom: 2px;
+				transition: 0.4s;
+				background-color: $color-white;
+			}
+
+			&.round {
+				border-radius: 16px;
+
+				&::before {
+					border-radius: 50%;
+				}
+			}
+		}
+	}
+
 	.evf-toggle-section {
 		display: inline-block;
 
-		label {
-			&.evf-toggle-switch {
-				line-height: 1;
-				margin-bottom: 0;
-				position: relative;
+		.evf-toggle-switch {
+			display: inline-flex;
+			position: relative;
+			line-height: 1;
+			margin-bottom: 0;
+			position: relative;
 
-				input {
-					top: 0;
-					left: 0;
-					margin: 0;
-					z-index: 1;
-					opacity: 0;
-					padding: 0;
-					width: 100%;
-					height: 100%;
-					border: none;
-					position: absolute;
+			input {
+				top: 0;
+				left: 0;
+				margin: 0;
+				z-index: 1;
+				opacity: 0;
+				padding: 0;
+				width: 100%;
+				height: 100%;
+				border: none;
+				position: absolute;
 
-					&:checked {
-						+ .evf-toggle-switch-wrap {
-							background-color: #11a0d2;
-							border: 2px solid #11a0d2;
-							border: 9px solid transparent;
-
-							&::before {
-								content: '';
-								height: 6px;
-								width: 2px;
-								background: #fff;
-								position: absolute;
-								left: 0;
-								top: 0;
-								transform: translateY(-50%);
-							}
-
-							&::after {
-								border: 2px solid transparent;
-							}
-						}
-
-						~ .evf-toggle-switch-control {
-							background-color: #fff;
-							border-width: 0;
-							transform: translateX(18px) translateY(-50%);
-						}
+				&:checked {
+					+ .evf-toggle-switch-wrap {
+						background-color: #11a0d2;
+						border: 2px solid #11a0d2;
+						border: 9px solid transparent;
 
 						&::before {
-							display: none;
+							content: '';
+							height: 6px;
+							width: 2px;
+							background: #fff;
+							position: absolute;
+							left: 0;
+							top: 0;
+							transform: translateY(-50%);
+						}
+
+						&::after {
+							border: 2px solid transparent;
 						}
 					}
 
-					&:focus {
-						+ .evf-toggle-switch-wrap {
-							box-shadow: 0 0 0 2px #fff, 0 0 0 3px #6c7781;
-						}
+					~ .evf-toggle-switch-control {
+						background-color: #fff;
+						border-width: 0;
+						transform: translateX(18px) translateY(-50%);
+					}
+
+					&::before {
+						display: none;
 					}
 				}
 
-				.evf-toggle-switch-wrap {
-					width: 36px;
-					height: 18px;
-					display: inline-flex;
-					background-color: #fff;
-					border: 2px solid #6c7781;
-					border-radius: 9px;
-					transition: 0.2s background ease;
-					position: relative;
-					align-items: center;
-					justify-content: flex-end;
-
-					&::after {
-						content: '';
-						width: 4px;
-						height: 4px;
-						margin-right: 2px;
-						border-radius: 50%;
-						display: inline-block;
-						border: 2px solid $color_gray-normal;
+				&:focus {
+					+ .evf-toggle-switch-wrap {
+						box-shadow: 0 0 0 2px #fff, 0 0 0 3px #6c7781;
 					}
-				}
-
-				.evf-toggle-switch-control {
-					display: block;
-					position: absolute;
-					top: 50%;
-					left: 4px;
-					width: 10px;
-					height: 10px;
-					border-radius: 50%;
-					transition: 0.1s transform ease;
-					background-color: #6c7781;
-					border: 5px solid #6c7781;
-					transform: translateY(-50%);
 				}
 			}
+
+			.evf-toggle-switch-wrap {
+				width: 36px;
+				height: 18px;
+				display: inline-flex;
+				background-color: #fff;
+				border: 2px solid #6c7781;
+				border-radius: 9px;
+				transition: 0.2s background ease;
+				position: relative;
+				align-items: center;
+				justify-content: flex-end;
+
+				&::after {
+					content: '';
+					width: 4px;
+					height: 4px;
+					margin-right: 2px;
+					border-radius: 50%;
+					display: inline-block;
+					border: 2px solid $color_gray-normal;
+				}
+			}
+
+			.evf-toggle-switch-control {
+				display: block;
+				position: absolute;
+				top: 50%;
+				left: 4px;
+				width: 10px;
+				height: 10px;
+				border-radius: 50%;
+				transition: 0.1s transform ease;
+				background-color: #6c7781;
+				border: 5px solid #6c7781;
+				transform: translateY(-50%);
+			}
+		}
+
+		label.evf-toggle-label {
+			display: inline-block;
+			margin-bottom: 0;
+			margin-left: 4px;
 		}
 	}
 
@@ -952,25 +1004,6 @@ button.everest-forms-btn {
 				}
 			}
 		}
-	}
-}
-
-/**
- * Badge
- */
-.everest-forms-badge {
-	background: $color_gray-lighten;
-	height: 20px;
-	font-size: 13px;
-	padding: 2px 8px;
-	border-radius: 10px;
-	margin: 0;
-	line-height: 1.2;
-	display: inline-block;
-
-	&.everest-forms-badge-success {
-		background: $green;
-		color: $color-white;
 	}
 }
 
@@ -1641,9 +1674,27 @@ button.everest-forms-btn {
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			border-radius: 4px;
+			border: 1px solid $color_gray-lighten;
 
 			&:hover {
 				color: $color-white;
+			}
+		}
+
+		.add {
+			&:hover {
+				background: $blue;
+				border-color: $blue;
+			}
+		}
+
+		.remove {
+			margin-left: 8px;
+
+			&:hover {
+				background: $red;
+				border-color: $red;
 			}
 		}
 
@@ -3028,12 +3079,21 @@ button.everest-forms-btn {
 				}
 
 				&.evf-toggle-switch {
-					display: flex;
+					margin-bottom: 0;
+				}
+
+				&.evf-toggle-label {
+					display: inline-block;
 					margin-bottom: 0;
 				}
 
 				&.everest-forms-hidden {
 					display: none;
+				}
+
+				&.evf-privacy-policy-consent-message {
+					display: initial;
+					margin-bottom: 0;
 				}
 			}
 
@@ -3138,6 +3198,25 @@ button.everest-forms-btn {
 					margin: 10px 0;
 					font-style: italic;
 					line-height: 1.2;
+				}
+
+				.evf-hidden-content {
+					margin-top: 10px;
+				}
+
+				.max-entry-section {
+					.max-entry-section-content {
+						display: flex;
+
+						.everest-forms-panel-field {
+							margin-bottom: 0;
+						}
+
+						.entry-period {
+							flex: 1;
+							margin-left: 10px;
+						}
+					}
 				}
 
 				&.everest-forms-panel-field-tinymce {
@@ -3252,10 +3331,6 @@ button.everest-forms-btn {
 
 						.actions {
 							margin-top: 8px;
-
-							.remove-button {
-								margin-right: 8px;
-							}
 						}
 					}
 
@@ -3278,7 +3353,7 @@ button.everest-forms-btn {
 					width: 20px;
 					height: 20px;
 					margin-top: 5px;
-					border-radius: 10px;
+					border: none;
 
 					.dashicons {
 						width: 16px;
@@ -3290,12 +3365,16 @@ button.everest-forms-btn {
 				.add {
 					&:hover {
 						color: $blue;
+						background: none;
 					}
 				}
 
 				.remove {
+					margin-left: 0;
+
 					&:hover {
 						color: $red;
+						background: none;
 					}
 				}
 
@@ -3513,6 +3592,7 @@ button.everest-forms-btn {
 				input[type='number'],
 				select {
 					margin-bottom: 0;
+					margin-left: 0;
 				}
 			}
 		}
@@ -4192,6 +4272,18 @@ button.everest-forms-btn {
 		}
 	}
 
+	.evf-connection-form {
+		input {
+			width: 100%;
+			margin-right: 15px;
+			margin-bottom: 15px;
+
+			@media screen and (min-width: 1200px) {
+				width: calc(33% - 20px);
+			}
+		}
+	}
+
 	.everest-forms-integration-content {
 		display: flex;
 		background-color: $color-white;
@@ -4261,15 +4353,6 @@ button.everest-forms-btn {
 
 				h3 {
 					margin-top: 0;
-				}
-
-				.evf-connection-form {
-					margin: 20px 0;
-
-					input {
-						width: 350px;
-						margin-right: 15px;
-					}
 				}
 
 				.everest-forms-btn {
@@ -4406,72 +4489,9 @@ button.everest-forms-btn {
 /**
  * List Table.
  */
-.tablenav {
-	#delete_all {
-		margin: 1px;
-	}
-
-	#export-csv-submit {
-		margin: 1px 8px 0 0;
-	}
-}
-
 table.wp-list-table {
 	span.na {
 		color: #999;
-	}
-
-	.everest-forms-toggle-form {
-		width: 28px;
-		height: 16px;
-		float: left;
-		margin-top: 3px;
-		margin-right: 16px;
-		position: relative;
-
-		input[type='checkbox'] {
-			display: none;
-
-			&:checked {
-				+ .slider {
-					background-color: $green;
-
-					&::before {
-						transform: translateX(100%);
-					}
-				}
-			}
-		}
-
-		.slider {
-			cursor: pointer;
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			transition: 0.4s;
-			background-color: #cdd0d2;
-
-			&::before {
-				content: '';
-				width: 12px;
-				height: 12px;
-				position: absolute;
-				left: 2px;
-				bottom: 2px;
-				transition: 0.4s;
-				background-color: $color-white;
-			}
-
-			&.round {
-				border-radius: 16px;
-
-				&::before {
-					border-radius: 50%;
-				}
-			}
-		}
 	}
 
 	.row-actions {
@@ -4564,6 +4584,84 @@ table.wp-list-table {
 				margin: 0;
 				padding: 0;
 
+				.everest-forms-edit-entry-field {
+					.evf-field {
+						input[type='text'],
+						input[type='date'],
+						input[type='date'],
+						input[type='datetime-local'],
+						input[type='email'],
+						input[type='file'],
+						input[type='image'],
+						input[type='month'],
+						input[type='number'],
+						input[type='password'],
+						input[type='range'],
+						input[type='search'],
+						input[type='tel'],
+						input[type='time'],
+						input[type='url'],
+						input[type='week'],
+						select,
+						.StripeElement,
+						canvas.evf-signature-canvas {
+							padding: 0 8px;
+							margin-bottom: 0;
+						}
+
+						textarea {
+							width: 100%;
+							max-width: 100%;
+							min-width: 100%;
+							height: 120px;
+						}
+
+						ul {
+							li {
+								margin: 0;
+								display: block;
+
+								label,
+								input {
+									margin: 0;
+								}
+
+								input[type='radio'],
+								input[type='checkbox'] {
+									margin-top: 4px;
+									margin-right: 8px;
+								}
+							}
+						}
+					}
+
+					.evf-field-radio ul,
+					.evf-field-checkbox ul,
+					.evf-field-payment-radio ul,
+					.evf-field-payment-checkbox ul {
+						margin: 0;
+
+						li {
+							display: flex;
+							margin-bottom: 5px;
+						}
+					}
+
+					label.evf-error {
+						cursor: default;
+						color: #900;
+						margin: 5px 0 0 0;
+					}
+
+					abbr.required {
+						color: #fa5252;
+						font-weight: 700;
+						border: 0 !important;
+						text-decoration: none;
+						vertical-align: middle;
+					}
+				}
+
 				.everest-forms-entry-details-meta,
 				.everest-forms-entry-actions-meta {
 					padding: 6px 0 0;
@@ -4586,6 +4684,14 @@ table.wp-list-table {
 				.everest-forms-entry-actions-meta a {
 					box-shadow: none;
 					text-decoration: none;
+				}
+
+				#major-publishing-actions {
+					outline: inherit;
+
+					a.button-secondary {
+						margin-left: 5px;
+					}
 				}
 			}
 		}
@@ -4954,6 +5060,32 @@ img.ui-datepicker-trigger {
 /**
  * Select2 elements.
  */
+.select2-container {
+	width: 100%;
+
+	.select2-selection--multiple {
+		.select2-selection__rendered {
+			display: block;
+		}
+
+		input {
+			&.select2-search__field {
+				min-width: 10px;
+				margin-top: 0 !important;
+				margin-bottom: 4px !important;
+			}
+		}
+	}
+
+	&.select2-container--focus {
+		.select2-selection--multiple {
+			border-color: #5b9dd9;
+			box-shadow: 0 0 2px rgba(30, 140, 190, 0.8);
+			outline: 2px solid transparent;
+		}
+	}
+}
+
 .select2-drop,
 .select2-dropdown {
 	z-index: 999999 !important;
@@ -5183,18 +5315,6 @@ img.ui-datepicker-trigger {
 
 			.select2-container {
 				min-width: 350px !important;
-
-				ul {
-					&.select2-selection__rendered {
-						display: block;
-					}
-				}
-
-				input {
-					&.select2-search__field {
-						min-width: 50px;
-					}
-				}
 			}
 		}
 	}
@@ -5253,21 +5373,6 @@ img.ui-datepicker-trigger {
 		.everest-forms-integration-content {
 			.integration-addon-detail {
 				width: 280px;
-			}
-
-			.integration-connection-detail {
-				.evf-account-connect {
-					.evf-connection-form {
-						input {
-							width: 100%;
-							margin-bottom: 15px;
-
-							&:last-child {
-								margin-bottom: 0;
-							}
-						}
-					}
-				}
 			}
 		}
 	}
@@ -5390,6 +5495,21 @@ img.ui-datepicker-trigger {
 				}
 			}
 		}
+	}
+}
+
+/**
+ * Optimisation for screens 768px.
+ */
+@media screen and (min-width: 768px) {
+	.evf-form-col-6 {
+		flex: 0 0 50%;
+		max-width: 50%;
+	}
+
+	.evf-form-col-4 {
+		flex: 0 0 33.333%;
+		max-width: 33.333%;
 	}
 }
 
